gap fixes

--- a/src/index.css
+++ b/src/index.css
@@ -19,7 +19,7 @@ html {
 
   /* 10px / 16px = 0.625 = 62.5% */
   /* Percentage of user's browser font-size setting */
-  font-size: 62.5%;
+  font-size: 14px;
   overflow-x: hidden;
 
   /* Does NOT work on Safari */
